# kind-microservice

./: .gitignore  Dockerfile  Makefile  README.md  create-kube-secret.sh  deployment.sh  docker-compose.yaml  kind-cluster-configurations.yaml  kube-deploy.yaml  pyproject.toml  register-image.sh
microservice/: app.py  config.yaml  helpers.py  start-mlflow-server.sh  train_forecasters_ray.py
microservice/config_module/: __init__.py
