[tool.poetry]
name = "microservice"
version = "0.1.0"
description = "Demand forecast microservice"
authors = ["Sajad Safarveisi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ray = {extras = ["train"], version = "^2.11.0"}
prophet = "^1.1.5"
mlflow = "^2.12.1"
fastapi = "^0.110.2"
kaggle = "^1.6.12"
plotly = "^5.21.0"
pydantic = "1.10.11"
uvicorn = "^0.29.0"
boto3 = "^1.34.91"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
